minor adjustments to spaces and fixed stream to java11, removed catch fromCloud.moveAll...